syntax = "proto3";

package sharding.v1;

// The node ID and name list. This maps the nodes to each shard. The node
// is responsible for looking up the shards itself.
// The worker ID is assigned by the leader node. The worker ID might change
// each time the cluster re-shards.
message Node {
  // Specifies the node id
  int32 node_id = 1;
  // Specifies the node name
  string name = 2;
  // Specifies the worker id
  int32 worker_id = 3;
}


message Shard {
  // Specifies the shard id
  int32 id = 1;
  // Specifies the node id
  int32 node_id = 2;
  // Specifies the shard weight
  int32 weight = 3;
}

message Replication {
  repeated Node nodes = 1;
  repeated Shard shards = 2;
}
